src/tests/errors/operators/002.ura
// errors/operators/002 — `operator` missing operator symbol
use "@/header"

struct Vec:
    x int

    operator () Vec:
        return self

main():
    v Vec
    v.x = 1
